--- a/Assets/CSS/whypickus.css
+++ b/Assets/CSS/whypickus.css
@@ -116,7 +116,7 @@
 .achievements__cards{
     display: flex;
     flex-direction: row;
-    gap: 3rem;
+    gap: 10rem;
     margin: 0 8rem;
     text-align: center;
     justify-content: space-evenly;
@@ -125,7 +125,6 @@
 .achievement__card1, .achievement__card2, .achievement__card3{
     background: #4B53F2;
     padding: 1.5rem;
-    width: 20%;
     height: 17.5rem;
     border-radius: 1rem;
     gap: 2rem;
@@ -135,10 +134,6 @@
     align-items: center;
 }
 
-.achievement__card1 p, .achievement__card2 p, .achievement__card3 p{
-    font-size: 15px;
-}
-
 .achievement__card1:hover, .achievement__card2:hover, .achievement__card3:hover{
     background: #4B53F2;
     box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
@@ -146,7 +141,7 @@
 
 .achievement__icon{
     background: #91B2F2;
-    padding: 0.6rem;
+    padding: 1rem;
     border-radius: 1rem;
     display: inline-flex;
     margin-bottom: 1rem;
@@ -162,7 +157,7 @@
 }
 
 .achievement__card1 p, .achievement__card2 p, .achievement__card3 p{
-    margin-top: 2rem;
+    margin: 1rem 0;
 }
 
 /* ===================MEET THE TEAM+++++++++++++++++++++++ */
@@ -315,6 +310,10 @@
 
 @media screen and (max-width: 1440px){
 
+    #animated-background{
+        height: 100%;
+    }
+
     .about__achievement{
         margin-top: 2rem;
     }
@@ -332,12 +331,8 @@
         flex-direction: row;
         height: 25rem;
         margin: 2rem 6rem 14rem;
-        gap: 2rem;
+        gap: 2.5rem;
         align-items: center;
-    }
-
-    .achievement__card1, .achievement__card2, .achievement__card3{
-        width: 50%;
     }
 
     .container_team__container{
@@ -351,22 +346,28 @@
     }
 
     .container_team__container .team__member img{
-        max-width: 100%;
-    } 
+        margin: 1.5rem 1.5rem 0.5rem;
+    }
 }
 
-@media screen and (max-width: 750px){
-    .about__achievements-right{
-        margin: 0 0 0 2rem;
+@media screen and (max-width: 820px){
+    .about__achievements-right h2{
+        margin-bottom: 6rem;
+    }
+    .about__achievements-right .achievements__cards{
+        margin: 12rem 0;
         justify-content: center;
     }
 
     .achievements__cards{
         display: flex;
-        flex-direction: row;
-        max-width: 100%;
-        height: 25rem;
+        flex-direction: column;
         align-items: center;
+    }
+
+    .achievement__card1, .achievement__card2, .achievement__card3{
+        margin: 0;
+        width: 50%;
     }
 
     .achievements__cards h3{
@@ -374,12 +375,12 @@
     }
 
     .achievements__cards p{
-        font-size: 0.85rem;
+        font-size: 1rem;
     }
 
     .container_team__container{
         grid-template-columns: 1fr 1fr;
-        gap: 0.7rem;
+        gap: 0.25rem;
     }
 
     .container_team__container .team__member img{
@@ -394,9 +395,13 @@
     .container_team__container .team__member p{
         margin-bottom: 1.5rem;
     }
+
+    .about__achievement .about__achievements-right h2, .team h2{
+        font-size: 1.5rem;
+    }
 }
 
-@media screen and (max-width: 720px){
+@media screen and (max-width: 576px){
     .achievements__cards{
         display: flex;
         flex-direction: column;
@@ -415,5 +420,9 @@
 
     .achievements__cards p{
         font-size: 0.75rem;
+    }
+
+    .about__achievement .about__achievements-right h2, .team h2{
+        font-size: 1.25rem;
     }
 }
