--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -84,8 +84,8 @@
       </div>
       <div class="copyright">
         <img src="/Assets/Images/scihublogofooter.png">
-        <p>Copyright &copy; 2024 Level Up Institute, All Rights Reserved.</p>
-        <p>Version 1.0.0</p>
+        <p>Copyright &copy; 2025 Level Up Science Hub, All Rights Reserved.</p>
+        <p>Version 1.0.1</p>
       </div>
     </footer>
   </body>
