--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -22,7 +22,7 @@
             </li>
             <li>
               <i class="bx bx-envelope"></i>
-              <h5 class="email">eoghanmurphy24@proton.me</h5>
+              <a href="mailto:levelupsciencehub@gmail.com">levelupsciencehub@gmail.com</a>
             </li>
             <li>
               <i class="bx bx-map"></i>
