--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -13,48 +13,6 @@
   <body>
     <footer>
       <div class="columns">
-        <div class="col">
-          <h5>Contact Information</h5>
-          <ul class="contact_details">
-            <li>
-              <!-- <i class="bx bxs-phone"></i>
-              <h5>+353 851193536</h5> -->
-            </li>
-            <li>
-              <i class="bx bx-envelope"></i>
-              <a href="mailto:levelupsciencehub@gmail.com">levelupsciencehub@gmail.com</a>
-            </li>
-            <li>
-              <i class="bx bx-map"></i>
-              <h5>Blessington, Wicklow, Ireland</h5>
-            </li>
-          </ul>
-          <a class="contactusfooter" href="/Pages/Contact Us.html">Contact Us</a>
-        </div>
-        <div class="col">
-          <h5>Site Links</h5>
-          <a href="/index.html">Home</a>
-          <a href="/Pages/Aboutus.html">About Us</a>
-          <a href="/Pages/bookagrind.html">Grinds</a>
-          <a href="/Pages/Courses.html">Courses</a>
-          <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
-          <a href="/Pages/congrind.html">Book a Grind</a>
-          <a href="/Pages/wpu.html">Why Pick Us?</a>
-        </div>
-        <div class="col">
-          <h5>Other Links</h5>
-          <!-- <a href="#">FAQS</a> -->
-          <a href="/Pages/Legal/privacypolicy.html">Privacy Policy</a>
-          <a href="/Pages/Legal/TermsofService.html">Terms & Conditions</a>
-          <a href="/Pages/Legal/cookies.html">Cookies</a>
-          <a href="/Pages/Contact Us.html">Support</a>
-          <a href="/Pages/FAQs.html">FAQs</a>
-        </div>
-        <div class="col">
-          <h5>Collaboration</h5>
-          <!-- <a href="#">Work With Us</a> -->
-          <a href="/Pages/attributions.html">Attributions</a>
-        </div>
         <div class="col last">
           <h5>Sign Up to Our Weekly Newsletter</h5>
           <p>Hear about our latest Blog and Upcoming Courses and Events!</p>
@@ -80,6 +38,49 @@
               <a href="#"><i class="bx bxl-linkedin-square"></i></a>
             </div>
           </div> -->
+        </div>
+        <div class="col">
+          <h5>Site Links</h5>
+          <a href="/index.html">Home</a>
+          <a href="/Pages/Aboutus.html">About Us</a>
+          <a href="/Pages/bookagrind.html">Grinds</a>
+          <a href="/Pages/Courses.html">Courses</a>
+          <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
+          <a href="/Pages/congrind.html">Book a Grind</a>
+          <a href="/Pages/wpu.html">Why Pick Us?</a>
+          <a href="/Pages/Contact Us.html">Contact Us</a>
+        </div>
+        <div class="col">
+          <h5>Other Links</h5>
+          <!-- <a href="#">FAQS</a> -->
+          <a href="/Pages/Legal/privacypolicy.html">Privacy Policy</a>
+          <a href="/Pages/Legal/TermsofService.html">Terms & Conditions</a>
+          <a href="/Pages/Legal/cookies.html">Cookies</a>
+          <a href="/Pages/Contact Us.html">Support</a>
+          <a href="/Pages/FAQs.html">FAQs</a>
+        </div>
+        <div class="col">
+          <h5>Collaboration</h5>
+          <!-- <a href="#">Work With Us</a> -->
+          <a href="/Pages/attributions.html">Attributions</a>
+        </div>
+        <div class="col">
+          <h5>Contact Information</h5>
+          <ul class="contact_details">
+            <li>
+              <!-- <i class="bx bxs-phone"></i>
+              <h5>+353 851193536</h5> -->
+            </li>
+            <li>
+              <i class="bx bx-envelope"></i>
+              <a href="mailto:levelupsciencehub@gmail.com">levelupsciencehub@gmail.com</a>
+            </li>
+            <li>
+              <i class="bx bx-map"></i>
+              <h5>Blessington, Wicklow, Ireland</h5>
+            </li>
+          </ul>
+          <a class="contactusfooter" href="/Pages/Contact Us.html">Contact Us</a>
         </div>
       </div>
       <div class="copyright">
