--- a/Assets/CSS/bookagrind.css
+++ b/Assets/CSS/bookagrind.css
@@ -142,7 +142,7 @@ li{
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
-.aboutme .information .linkedin a{
+.aboutme .information a{
     display: flex;
     justify-content: center;
     font-size: 2rem;
