--- a/Assets/CSS/Template.css
+++ b/Assets/CSS/Template.css
@@ -206,7 +206,7 @@ footer .columns .col.last .social-links i{
     margin-bottom: 1rem;
 }
 
-.contact_details h5{
+footer .contact_details h5{
     font-size: 14px;
     font-weight: normal;
 }
@@ -221,6 +221,7 @@ footer .copyright {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     font-size: 13px;
     margin-top: 2rem;
 }
